# dmtx-utils

./: AUTHORS  ChangeLog  KNOWNBUG  Makefile.am  README  README.cygwin  README.freebsd  README.linux  README.mingw  README.osx  README.unix  TODO  autogen.sh  configure.ac
common/: dmtxutil.c  dmtxutil.h
dmtxquery/: Makefile.am  dmtxquery.c  dmtxquery.h
dmtxread/: Makefile.am  dmtxread.c  dmtxread.h
dmtxtract/: Makefile.am  dmtxtract.c  dmtxtract.h
dmtxwrite/: Makefile.am  dmtxwrite.c  dmtxwrite.h
man/: dmtxquery.1  dmtxread.1  dmtxwrite.1
script/: check_all.sh  common_tasks.txt
util/common/: dmtxutil.c
util/dmtxread/: dmtxread.h
util/dmtxwrite/: dmtxwrite.h
